--- a/components/ListTrips/style.module.scss
+++ b/components/ListTrips/style.module.scss
@@ -1,9 +1,19 @@
-.containerForTrips{
+.containerForTrips {
   margin-top: 2.5rem;
-  .search{
-    background-color: gainsboro;
-    height: 2rem;
-    border: none;
-    margin-bottom: 2.5rem;
+  .searchField {
+    position: relative;
+    .search {
+      background-color: gainsboro;
+      height: 2rem;
+      border: none;
+      margin-bottom: 2.5rem;
+      padding-left: 30px;
+    }
+    .iconSearch{
+      position: absolute;
+      left: 5px;
+      top: 5px;
+
+    }
   }
 }
