--- a/components/UI/ViewCard/style.module.scss
+++ b/components/UI/ViewCard/style.module.scss
@@ -3,14 +3,15 @@
   justify-content: space-between;
   overflow-x: hidden;
   scroll-behavior: smooth;
+width: 100%;
   .card {
     cursor: pointer;
-    max-width:10rem;
+    max-width: 10rem;
     min-width: 10rem;
     margin: 0 1rem;
     border: 1px solid var(--grey-primary);
 
-    .image{
+    .image {
       width: 100%;
       min-width: 150px;
     }
@@ -28,7 +29,7 @@
     border-color: var(--blue-primary);
   }
   .addNewTrip {
-    background-color: red;
+    background-color: var(--grey-primary);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -48,7 +49,7 @@
     height: 2rem;
     margin: 0 0.5rem;
     background-color: var(--grey-primary);
-    border:none;
+    border: none;
     border-radius: 0.2rem;
   }
 }
