--- a/app/forecast/style.module.scss
+++ b/app/forecast/style.module.scss
@@ -23,8 +23,10 @@
   }
   .currentWeather{
     width: 35%;
-    min-width: 500px;
+    min-width: 400px;
+    height: 100vh;
     @media (max-width: $tablet) {
+      height: auto;
       width: 100%;
       min-width: auto
     }
