--- a/components/UI/CurrentWeather/style.module.scss
+++ b/components/UI/CurrentWeather/style.module.scss
@@ -1,11 +1,17 @@
+@import "/assets/style/variables.module.scss";
 .weather{
-  padding: 1rem;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: rgb(234, 214, 64) ;
+
+  @media (max-width: $tablet) {
+    padding: 1rem 0;
+    min-width: auto
+
+  }
   .dayOfWeek{
     font-size: 2rem;
     text-align: center;
