--- a/app/forecast/style.module.scss
+++ b/app/forecast/style.module.scss
@@ -22,10 +22,10 @@
     }
   }
   .currentWeather{
-    
+
     width: 35%;
     min-width: 400px;
-    height: 100vh;
+    min-height: 100vh;
     @media (max-width: $tablet) {
       height: auto;
       width: 100%;
